# alto-assessment

./: .gitignore  DESIGN.md  README.md  pyproject.toml  report.html
app/: __init__.py  api.py  dashboard.py  engine.py  logging_config.py  main.py  models.py  service.py  store.py
tests/: test_engine.py  test_recovery_and_api.py
